GNOME Bugzilla – Bug 776133
GdMainView: The DnD selection counter is broken on HiDpi
Last modified: 2016-12-15 22:50:25 UTC
GdMainView draws an emblem with a number if you are DnDing multiple items from the selection mode. The emblem looks very big and is placed far away from the mouse cursor on HiDpi. At least part of the bug arises from the Cairo documentation either being wrong or being incomplete. See: https://bugs.freedesktop.org/show_bug.cgi?id=99094
Created attachment 342020 [details] [review] main-view: Don't let the Cairo surface get bigger while copying
Created attachment 342023 [details] [review] main-view: Fix the size and offset of the counter icon on HiDpi
Created attachment 342024 [details] [review] main-view: Don't let the Cairo surface get bigger while copying Fix a typo in the commit message.
Review of attachment 342023 [details] [review]: OK, thanks.
Review of attachment 342024 [details] [review]: OK
Thanks for the reviews!